<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grey"
    tools:context="com.example.natashafinnegan.nihapp.TutorialActivity">

    <TextView
        android:id="@+id/tutorial_Step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/textTutorial_Step1"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tutorial_Step2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorial_Step1"
        android:paddingTop="16dp"
        android:text="@string/textTutorial_Step2"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tutorial_Step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorial_Step2"
        android:paddingTop="16dp"
        android:text="@string/textTutorial_Step3"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/viewVideoTutorial"
        android:layout_width="1.15in"
        android:layout_height="0.5in"
        android:layout_alignParentBottom="true"
        android:text="@string/videoTutorial"
        android:onClick="tutorialOnClick"/>

    <Button
        android:id="@+id/exitTutorial"
        android:layout_width="1.15in"
        android:layout_height="0.5in"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/viewVideoTutorial"
        android:text="@string/exitTutorial"
        android:onClick="tutorialOnClick"/>

</RelativeLayout>
