<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.natashafinnegan.nihapp.emailActivity">

        <!--Row 0-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/background"
                android:text="@string/recipient"
                />
        </TableRow>

        <!--Row 1-->
       <TableRow>
           <EditText
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/recipient"
               android:hint="@string/enterRecipient"
               android:textColorHint="@color/background"
               android:textColor="@color/background"
               />
       </TableRow>

        <!--Row 2-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/background"
                android:text="@string/subject"
                android:textStyle="bold"
                />

        </TableRow>

        <!--Row 0-->
        <TableRow>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subject"
                android:hint="@string/enterSubject"
                android:textColorHint="@color/background"
                android:textColor="@color/background"
                />
        </TableRow>

        <!--Row 0-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/background"
                android:text="@string/text"
                android:textStyle="bold"
                />

        </TableRow>

        <!--Row 0-->
        <TableRow>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body"
                android:hint="@string/enterText"
                android:textColorHint="@color/background"
                android:inputType="textMultiLine"
                android:textColor="@color/background"
                />
        </TableRow>

        <!--Row 0-->
        <Button
            android:backgroundTint="@color/background"
            android:id="@+id/sendButton"
            android:text="@string/send"
            android:onClick="onClick"
            />

    </TableLayout>
</ScrollView>